--- a/Complete-Python-3-Bootcamp-master/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/Complete-Python-3-Bootcamp-master/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "sentence\n",
+      "\n",
+      "--- Includes the small s in the loop\n",
+      "start\n",
+      "s\n",
+      "sentence\n",
+      "\n",
+      "--- Another solution\n",
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "st_list = [i for i in st.split()]\n",
+    "\n",
+    "for l in st_list:\n",
+    "    if l[0].upper() == 'S' and len(l) > 1:\n",
+    "        print(f\"{l}\")\n",
+    "\n",
+    "print(\"\\n--- Includes the small s in the loop\")\n",
+    "#includes the small s\n",
+    "for l in st_list:\n",
+    "    if l[0].upper() == 'S':\n",
+    "        print(f\"{l}\")\n",
+    "        \n",
+    "#Solution withtout the need ot a new list\n",
+    "print(\"\\n--- Another solution\")\n",
+    "for l in st.split():\n",
+    "    if l[0].upper() == 'S':\n",
+    "        print(f\"{l}\")"
    ]
   },
   {
@@ -46,11 +82,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "my_list = [i for i in range(0,11) if i%2 == 0]\n",
+    "print(my_list)\n",
+    "\n",
+    "list(range(0,11,2))"
    ]
   },
   {
@@ -63,12 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "my_list = [i for i in range(1,51) if i%3 == 0]\n",
+    "my_list"
    ]
   },
   {
@@ -81,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +160,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even: only\n",
+      "even: that\n",
+      "even: with\n",
+      "even: in\n",
+      "even: this\n",
+      "even: sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "for l in st.split():\n",
+    "    if int(len(l))%2 == 0:\n",
+    "        print(f\"even: {l}\")"
    ]
   },
   {
@@ -107,11 +192,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "Buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "Buzz\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "Buzz\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n",
+      "31\n",
+      "32\n",
+      "Fizz\n",
+      "34\n",
+      "Buzz\n",
+      "Fizz\n",
+      "37\n",
+      "38\n",
+      "Fizz\n",
+      "Buzz\n",
+      "41\n",
+      "Fizz\n",
+      "43\n",
+      "44\n",
+      "FizzBuzz\n",
+      "46\n",
+      "47\n",
+      "Fizz\n",
+      "49\n",
+      "Buzz\n",
+      "Fizz\n",
+      "52\n",
+      "53\n",
+      "Fizz\n",
+      "Buzz\n",
+      "56\n",
+      "Fizz\n",
+      "58\n",
+      "59\n",
+      "FizzBuzz\n",
+      "61\n",
+      "62\n",
+      "Fizz\n",
+      "64\n",
+      "Buzz\n",
+      "Fizz\n",
+      "67\n",
+      "68\n",
+      "Fizz\n",
+      "Buzz\n",
+      "71\n",
+      "Fizz\n",
+      "73\n",
+      "74\n",
+      "FizzBuzz\n",
+      "76\n",
+      "77\n",
+      "Fizz\n",
+      "79\n",
+      "Buzz\n",
+      "Fizz\n",
+      "82\n",
+      "83\n",
+      "Fizz\n",
+      "Buzz\n",
+      "86\n",
+      "Fizz\n",
+      "88\n",
+      "89\n",
+      "FizzBuzz\n",
+      "91\n",
+      "92\n",
+      "Fizz\n",
+      "94\n",
+      "Buzz\n",
+      "Fizz\n",
+      "97\n",
+      "98\n",
+      "Fizz\n",
+      "Buzz\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "for i in range(1,101):   \n",
+    "    \n",
+    "    if i%3 == 0 and i%5 == 0:\n",
+    "        print('FizzBuzz')\n",
+    "    elif i%3 ==0:\n",
+    "        print('Fizz')\n",
+    "    elif i%5 ==0:\n",
+    "        print('Buzz')\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -124,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +335,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P', 'o', 't', 'w', 't', 's', 'w', 's', 'i', 't', 's']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['P', 'o', 't', 'w', 't', 's', 'w', 's', 'i', 't', 's']"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "st_list = [i[0] for i in st.split(sep=' ')]\n",
+    "print(st_list)\n",
+    "\n",
+    "[w[0] for w in st.split()]"
    ]
   },
   {
@@ -164,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
