--- a/Complete-Python-3-Bootcamp-master/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/Complete-Python-3-Bootcamp-master/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -95,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 891,
    "metadata": {},
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    if text.split()[0][0] == text.split()[1][0]:\n",
+    "    if text.lower().split()[0][0] == text.lower().split()[1][0]:\n",
     "        return True\n",
     "    else:\n",
     "        return False"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 892,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 892,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 893,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 893,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 894,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,14 +298,27 @@
     "            new_name.append(name[letter].upper())\n",
     "        else:\n",
     "            new_name.append(name[letter])\n",
-    "    8\n",
+    "\n",
     "    new_name[::] = [''.join(new_name[::])]\n",
     "    return new_name[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 898,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def old_macdonald(name):\n",
+    "    f_half = name[:3]\n",
+    "    s_half = name[3:]\n",
+    "    \n",
+    "    return f_half.capitalize() + s_half.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 899,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +327,7 @@
        "'MacDonald'"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 899,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,12 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 900,
    "metadata": {},
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    if abs(100-n) <= 10 or abs(200-n) <= 10:\n",
+    "    if (abs(100-n) <= 10) or (abs(200-n) <= 10):\n",
     "        return True\n",
     "    else:\n",
     "        return False\n"
@@ -425,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 901,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +447,7 @@
        "True"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 901,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 902,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +468,7 @@
        "False"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 902,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 903,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +489,7 @@
        "True"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 903,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,13 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 904,
    "metadata": {},
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
     "    for i in range(len(nums)-1):\n",
-    "        if nums[i+1] == 3 and nums[i+1] == nums[i]:\n",
+    "        if nums[i] == 3 and nums[i+1] == 3:\n",
     "            return True\n",
     "        else:\n",
     "            continue\n",
@@ -523,7 +536,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 916,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_33(nums):\n",
+    "    for i in range(len(nums)-1):\n",
+    "        if nums[i:i+2] == [3,3]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            continue\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 917,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +560,7 @@
        "True"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 917,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 918,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +581,7 @@
        "False"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 918,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 919,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +602,7 @@
        "False"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 919,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 920,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +623,7 @@
        "True"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 920,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 921,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +644,7 @@
        "True"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 921,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 928,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +692,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 925,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def paper_doll(text):\n",
+    "    new_list = ''\n",
+    "    \n",
+    "    for i in text:\n",
+    "        new_list += i*3\n",
+    "    \n",
+    "    return new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 929,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +716,7 @@
        "'HHHeeellllllooo'"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 929,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 927,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +737,7 @@
        "'MMMiiissssssiiissssssiiippppppiii'"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 927,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,10 +848,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 948,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nWRONG SOLUTION:\\ndef summer_69(arr):\\n    if 6 in arr or 9 in arr:\\n        indexes = []\\n        count_6 = 0\\n        for i,l in enumerate(arr):\\n            if l == 6 or l == 9:\\n                indexes.append(i)\\n        return sum(arr) - sum(arr[indexes[0]:(indexes[1]+1)])\\n    else:\\n        return sum(arr)\\n    \\n    return 0\\n'"
+      ]
+     },
+     "execution_count": 948,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
+    "WRONG SOLUTION:\n",
     "def summer_69(arr):\n",
     "    if 6 in arr or 9 in arr:\n",
     "        indexes = []\n",
@@ -818,12 +874,42 @@
     "                indexes.append(i)\n",
     "        return sum(arr) - sum(arr[indexes[0]:(indexes[1]+1)])\n",
     "    else:\n",
-    "        return sum(arr)"
+    "        return sum(arr)\n",
+    "    \n",
+    "    return 0\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 949,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summer_69(arr):\n",
+    "    \n",
+    "    total = 0\n",
+    "    add = True\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        while add:\n",
+    "            if num != 6:\n",
+    "                total += num\n",
+    "                break\n",
+    "            else:\n",
+    "                add = False\n",
+    "        while not add:\n",
+    "            if num != 9:\n",
+    "                break\n",
+    "            else:\n",
+    "                add = True\n",
+    "                break\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 950,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +918,7 @@
        "9"
       ]
      },
-     "execution_count": 543,
+     "execution_count": 950,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 951,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +939,7 @@
        "9"
       ]
      },
-     "execution_count": 544,
+     "execution_count": 951,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 952,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +960,7 @@
        "14"
       ]
      },
-     "execution_count": 545,
+     "execution_count": 952,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,6 +968,27 @@
    "source": [
     "# Check\n",
     "summer_69([2, 1, 6, 9, 11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 953,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 953,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "summer_69([2, 1, 6, 9, 11, 11, 6, 1, 2, 3, 4, 9, 5, 9, 1, 6, 7,8, 99])"
    ]
   },
   {
@@ -908,6 +1015,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' WRONG SOLUTION\n",
     "def spy_game(nums):\n",
     "    list_007 = []\n",
     "    for i in range(len(nums)):\n",
@@ -917,12 +1025,29 @@
     "            return True\n",
     "        else:\n",
     "            continue\n",
-    "    return False"
+    "    return False\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 954,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spy_game(nums):\n",
+    "    \n",
+    "    code = [0, 0, 7, 'x']\n",
+    "    for num in nums:\n",
+    "        if num == code[0]:\n",
+    "            code.pop(0)\n",
+    "    \n",
+    "    return len(code)==1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 955,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +1056,7 @@
        "True"
       ]
      },
-     "execution_count": 604,
+     "execution_count": 955,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,16 +1068,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 956,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 605,
+     "execution_count": 956,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 957,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +1098,7 @@
        "False"
       ]
      },
-     "execution_count": 606,
+     "execution_count": 957,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 959,
    "metadata": {},
    "outputs": [
     {
@@ -994,14 +1119,14 @@
        "True"
       ]
      },
-     "execution_count": 612,
+     "execution_count": 959,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check\n",
-    "spy_game([1,7,2,0,4,5,0,0,0,7])"
+    "spy_game([1,7,2,0,4,5,0,0,1,7])"
    ]
   },
   {
@@ -1047,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 885,
+   "execution_count": 960,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1181,7 @@
        "25"
       ]
      },
-     "execution_count": 885,
+     "execution_count": 960,
      "metadata": {},
      "output_type": "execute_result"
     }
