Almost first milestone

--- a/Complete-Python-3-Bootcamp-master/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/Complete-Python-3-Bootcamp-master/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -63,7 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ran_check(num,low,high):\n",
+    "    if num in range(low,high):\n",
+    "        return f\"{num} is within {low} and {high}\" \n",
+    "    else:\n",
+    "        return f\"{num} is NOT within {low} and {high}\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +85,7 @@
        "'9 is NOT within 2 and 7'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    return num>=low and num<=high"
+    "    return num in range(low,high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +123,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique_list(lst):\n",
+    "    x = []\n",
+    "    for a in lst:\n",
+    "        if a not in x:\n",
+    "            x.append(a)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +239,7 @@
        "{1, 2, 3, 4, 5}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
