--- a/Complete-Python-3-Bootcamp-master/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/Complete-Python-3-Bootcamp-master/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -220,26 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    return set(lst)"
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 2, 3, 4, 5}"
+       "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
