Python Object Oriented Programming

--- a/Complete-Python-3-Bootcamp-master/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
+++ b/Complete-Python-3-Bootcamp-master/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
@@ -13,25 +13,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
-    "        pass\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
     "    \n",
     "    def distance(self):\n",
-    "        pass\n",
+    "        return ((self.coor1[1] - self.coor1[0])**2 + (self.coor2[1] - self.coor2[0])**2) * 0.5\n",
     "    \n",
     "    def slope(self):\n",
-    "        pass"
+    "        return ((self.coor2[1] - self.coor2[0]) / (self.coor1[1] - self.coor1[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Line:\n",
+    "    \n",
+    "    def __init__(self,coor1,coor2):\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
+    "    \n",
+    "    def distance(self):\n",
+    "        x1,y1 = self.coor1\n",
+    "        x2,y2 = self.coor2\n",
+    "        return ((x2 - x1)**2 + (y2 - y1)**2)**0.5\n",
+    "    \n",
+    "    def slope(self):\n",
+    "        x1,y1 = self.coor1\n",
+    "        x2,y2 = self.coor2\n",
+    "        return ((y2 - y1) / (x2 - x1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +85,7 @@
        "9.433981132056603"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +105,7 @@
        "1.6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,25 +131,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cylinder:\n",
     "    \n",
+    "    pi = 3.1416\n",
+    "    \n",
     "    def __init__(self,height=1,radius=1):\n",
-    "        pass\n",
+    "        self.height = height\n",
+    "        self.radius = radius\n",
     "        \n",
     "    def volume(self):\n",
-    "        pass\n",
+    "        \n",
+    "        pi = self.pi\n",
+    "        r = self.radius\n",
+    "        h = self.height\n",
+    "        \n",
+    "        return pi*h*(r**2)\n",
     "    \n",
     "    def surface_area(self):\n",
-    "        pass"
+    "        \n",
+    "        pi = self.pi\n",
+    "        r = self.radius\n",
+    "        h = self.height\n",
+    "        \n",
+    "        return (2*pi*r*h) + (2*pi*r**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "56.52"
+       "56.5488"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "94.2"
+       "94.24799999999999"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +209,13 @@
    "source": [
     "c.surface_area()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -183,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
