working with tests

--- a/Complete-Python-3-Bootcamp-master/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
+++ b/Complete-Python-3-Bootcamp-master/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "            print(\"Uh oh...vc nao fez certo\")\n",
     "            continue\n",
     "        else:\n",
-    "            print(result)\n",
+    "            print(\"{r:0.2f}\".format(r=result))\n",
     "            print(\"Ok!\")\n",
     "            break\n",
     "        finally:\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,6 +95,13 @@
      "text": [
       "Enter a number: oi\n",
       "Uh oh...vc nao fez certo\n",
+      "---\n",
+      "Enter a number: tchau\n",
+      "Uh oh...vc nao fez certo\n",
+      "---\n",
+      "Enter a number: 39\n",
+      "6.24\n",
+      "Ok!\n",
       "---\n"
      ]
     }
