--- a/Decorators.ipynb
+++ b/Decorators.ipynb
@@ -594,12 +594,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:05:06.432426Z",
+     "start_time": "2018-08-26T22:05:06.428405Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some extra code before the original function\n",
+      "I want to be decorated\n",
+      "Some Extra code after the original function\n"
+     ]
+    }
+   ],
+   "source": [
+    "func_needs_decorator()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "func_neeed"
-   ]
+   "source": []
   }
  ],
  "metadata": {
