decorators and generators homework

--- a/Complete-Python-3-Bootcamp-master/11-Python Generators/02-Iterators and Generators Homework.ipynb
+++ b/Complete-Python-3-Bootcamp-master/11-Python Generators/02-Iterators and Generators Homework.ipynb
@@ -13,19 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:23:42.766904Z",
+     "start_time": "2018-08-26T22:23:42.763896Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def gensquares(N):\n",
-    "\n",
-    "    pass"
+    "    for n in range(N):\n",
+    "        yield n**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:23:43.244878Z",
+     "start_time": "2018-08-26T22:23:43.240865Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,36 +92,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:26:27.896876Z",
+     "start_time": "2018-08-26T22:26:27.881342Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "from random import randint as ran\n",
+    "\n",
     "def rand_num(low,high,n):\n",
     "\n",
-    "    pass"
+    "    for num in range(n):\n",
+    "        yield ran(low,high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:26:28.318099Z",
+     "start_time": "2018-08-26T22:26:28.314086Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "1\n",
       "10\n",
-      "5\n",
-      "8\n",
-      "2\n",
-      "8\n",
-      "5\n",
       "4\n",
       "5\n",
-      "1\n",
-      "4\n"
+      "4\n",
+      "6\n",
+      "8\n",
+      "2\n",
+      "9\n",
+      "7\n",
+      "8\n",
+      "10\n",
+      "1\n"
      ]
     }
    ],
@@ -131,13 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:26:38.929310Z",
+     "start_time": "2018-08-26T22:26:38.898189Z"
+    }
+   },
    "outputs": [],
    "source": [
     "s = 'hello'\n",
     "\n",
-    "#code here"
+    "#code here\n",
+    "s_iter = iter(s)"
    ]
   },
   {
@@ -145,8 +174,11 @@
    "metadata": {},
    "source": [
     "### Problem 4\n",
-    "Explain a use case for a generator using a yield statement where you would not want to use a normal function with a return statement.<br><br><br><br><br><br>\n",
-    "\n"
+    "Explain a use case for a generator using a yield statement where you would not want to use a normal function with a return statement.<br><br>\n",
+    "\n",
+    "Obvious would be fibonacci, but talking about the real world:\n",
+    "\n",
+    "- we can read large files without bringing everything to memory\n"
    ]
   },
   {
@@ -206,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
