--- a/Generators.ipynb
+++ b/Generators.ipynb
@@ -548,14 +548,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:20:42.713582Z",
+     "start_time": "2018-08-26T22:20:42.710593Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "s_iter = iter(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:20:56.821857Z",
+     "start_time": "2018-08-26T22:20:56.816875Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(s_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-26T22:21:02.158395Z",
+     "start_time": "2018-08-26T22:21:02.153352Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(s_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
    "source": []
   }
  ],
