--- a/Collections_COUNTER.ipynb
+++ b/Collections_COUNTER.ipynb
@@ -314,11 +314,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-27T22:31:55.027228Z",
-     "start_time": "2018-08-27T22:31:55.023245Z"
+     "end_time": "2018-08-27T22:34:55.702374Z",
+     "start_time": "2018-08-27T22:34:55.698876Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('How', 1), ('many', 1), ('times', 1), ('a', 3), ('word', 2), ('appears', 1), ('in', 2), ('setence', 1), ('if', 1), ('you', 1), ('can', 1), ('count', 1), ('any', 1), ('setence?', 1)])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-27T22:34:49.247097Z",
+     "start_time": "2018-08-27T22:34:49.243086Z"
     }
    },
    "outputs": [
@@ -341,13 +366,13 @@
        "         'setence?': 1})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Counter(dict(test))"
+    "Counter(dict(teste))#CONVERTS FROM A LIST"
    ]
   },
   {
