DateTime in Python

--- a/DateTime in Python.ipynb
+++ b/DateTime in Python.ipynb
@@ -438,52 +438,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-27T22:57:40.837213Z",
-     "start_time": "2018-08-27T22:57:40.833202Z"
+     "end_time": "2018-08-27T23:00:02.260781Z",
+     "start_time": "2018-08-27T23:00:02.256754Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "datetime.date(2008, 3, 11)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008-03-11\n"
+     ]
     }
    ],
    "source": [
-    "d2"
+    "print(d2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-27T22:58:14.177345Z",
-     "start_time": "2018-08-27T22:58:14.173336Z"
+     "end_time": "2018-08-27T23:00:39.952985Z",
+     "start_time": "2018-08-27T23:00:39.949991Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "datetime.timedelta(-3652)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018 days, 0:33:28\n"
+     ]
     }
    ],
    "source": [
-    "d2 - d1"
+    "print(datetime.timedelta(d1.year,d2.year))"
    ]
   },
   {
