new things in python training

--- a/COLLECTIONS_DEFAULTDICT.ipynb
+++ b/COLLECTIONS_DEFAULTDICT.ipynb
@@ -157,12 +157,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-27T22:38:20.267377Z",
+     "start_time": "2018-08-27T22:38:20.264885Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = defaultdict(lambda:0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-27T22:38:26.063050Z",
+     "start_time": "2018-08-27T22:38:26.057026Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['sei la mesmo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-27T22:38:37.967497Z",
+     "start_time": "2018-08-27T22:38:37.962502Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['o que vai acontecer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-27T22:38:41.643399Z",
+     "start_time": "2018-08-27T22:38:41.639388Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>,\n",
+       "            {'sei la mesmo': 0, 'o que vai acontecer': 0})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
