Python bootcamp initial commit

--- a/Python-Crash-Course/Python Crash Course Exercises .ipynb
+++ b/Python-Crash-Course/Python Crash Course Exercises .ipynb
@@ -27,9 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:23:07.713573Z",
+     "start_time": "2018-08-29T23:23:07.697909Z"
+    }
    },
    "outputs": [
     {
@@ -38,12 +41,14 @@
        "2401"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "7**4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,32 +63,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:23:52.238742Z",
+     "start_time": "2018-08-29T23:23:52.222947Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"Hi there Sam!\"\n",
+    "a = s.split()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:23:57.528760Z",
+     "start_time": "2018-08-29T23:23:57.513120Z"
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hi', 'there', 'dad!']"
+       "['Hi', 'there', 'Sam!']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,9 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:24:41.740988Z",
+     "start_time": "2018-08-29T23:24:41.723949Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -113,20 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:24:49.271495Z",
+     "start_time": "2018-08-29T23:24:49.240299Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The diameter of Earth is 12742 kilometers.\n"
+      "The diameter of the Earth is 12742 kilometers\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"The diameter of the {e} is {d} kilometers\".format(e=planet, d=diameter))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,9 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:25:22.106894Z",
+     "start_time": "2018-08-29T23:25:22.075485Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -148,9 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:26:06.699405Z",
+     "start_time": "2018-08-29T23:26:06.683931Z"
+    }
    },
    "outputs": [
     {
@@ -159,12 +189,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "lst[3][1][2][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,9 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:26:16.027638Z",
+     "start_time": "2018-08-29T23:26:16.012008Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -186,9 +221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:27:19.348274Z",
+     "start_time": "2018-08-29T23:27:19.332804Z"
+    }
    },
    "outputs": [
     {
@@ -197,12 +235,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,33 +275,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:28:44.235566Z",
+     "start_time": "2018-08-29T23:28:44.220042Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def domainGet(a):\n",
+    "    return a.split(\"@\")[1] "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:28:50.192479Z",
+     "start_time": "2018-08-29T23:28:50.176807Z"
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'domain.com'"
+       "'gmail.com'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "domainGet('user@domain.com')"
+    "domainGet('user@gmail.com')"
    ]
   },
   {
@@ -273,18 +322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:29:58.549292Z",
+     "start_time": "2018-08-29T23:29:58.546308Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def findDog(string):\n",
+    "    return 'dog' in string"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:30:08.020220Z",
+     "start_time": "2018-08-29T23:30:08.004711Z"
+    }
    },
    "outputs": [
     {
@@ -293,7 +351,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,18 +369,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:34:08.088303Z",
+     "start_time": "2018-08-29T23:34:08.072806Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def countDog(string):\n",
+    "    return dict(Counter(string.split()))['dog']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:34:08.640604Z",
+     "start_time": "2018-08-29T23:34:08.635589Z"
+    }
    },
    "outputs": [
     {
@@ -331,7 +400,7 @@
        "2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,9 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:34:30.888199Z",
+     "start_time": "2018-08-29T23:34:30.870715Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -366,9 +438,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:36:10.516988Z",
+     "start_time": "2018-08-29T23:36:10.501351Z"
+    }
    },
    "outputs": [
     {
@@ -377,12 +452,14 @@
        "['soup', 'salad']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(filter(lambda x:x[0] == \"s\", seq))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,52 +475,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:39:06.834977Z",
+     "start_time": "2018-08-29T23:39:06.819319Z"
+    }
    },
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
-    "    pass"
+    "    \n",
+    "    speed_bonus = 0\n",
+    "    \n",
+    "    if is_birthday:\n",
+    "        speed_bonus = 5\n",
+    "        \n",
+    "    if speed >= 81 + speed_bonus:\n",
+    "        return 'BIG TICKET'\n",
+    "    elif speed >= 61 + speed_bonus:\n",
+    "        return 'SMALL TICKET'\n",
+    "    else:\n",
+    "        return 'NO TICKET'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:39:41.436769Z",
+     "start_time": "2018-08-29T23:39:41.405390Z"
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Small Ticket'"
+       "'SMALL TICKET'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "caught_speeding(81,True)"
+    "caught_speeding(85,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "end_time": "2018-08-29T23:39:44.202632Z",
+     "start_time": "2018-08-29T23:39:44.198622Z"
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Big Ticket'"
+       "'BIG TICKET'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,9 +573,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
